/**
 * BaseDialog.Header - Header with title and close button
 */

import React from 'react';
import CloseIcon from '@mui/icons-material/Close';
import {
  StyledDialogTitle,
  TitleContainer,
  TitleText,
  WarningIcon,
  CloseButton,
...
