...
              minWidth: 180,
              height: 42,
              background: 'transparent',
              color: canReview ? colors.button.primaryText : undefined,
            }}
          >
            Review & Swap
          </PrimaryButton>
        </ReviewButtonWrapper>
      </ButtonContainer>
    </Container>
  );
}
...
